syntax ="proto3";


package user_info;

import "user.proto";


option go_package = "github.com/shaineminkyaw/grpc_lab/user_info/pb";


message UserRequest {
    string email =1;
    string password =2;
    string code =3;
    int32 gender_type = 4;
    string nation_id =5;
    string city =6;  
}

message UserResponse {
    User user =1;
}

